--- a/style.css
+++ b/style.css
@@ -1,45 +1,29 @@
-body {
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    padding: 0;
+body{
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
 }
 
-.container {
-    width: 80%;
-    margin: auto;
-}
-
-header {
-    background: #333;
-    color: #fff;
-    padding: 20px 0;
-}
-
-nav ul {
+.nav ul{
     list-style-type: none;
+    margin: 0;
+    padding: 7px;
+    overflow: hidden;
+    background-color: #333333;
 }
 
-nav ul li {
-    display: inline;
-    margin-right: 20px;
+.nav ul li{
+    float: right;
 }
 
-nav a {
-    color: #fff;
-    text-decoration: none;
-}
-
-section {
-    padding: 40px 0;
-}
-
-.project {
-    margin-bottom: 20px;
-}
-
-footer {
-    background: #333;
-    color: #fff;
+.nav ul li a{
+    display: block;
+    color: #e2e1df;
     text-align: center;
-    padding: 10px 0;
+    padding: 10px;
+    text-decoration: none;
+    border-radius: 5.5px;
+}
+
+.nav ul li a:hover{
+    background-color: #e2e1df;
+    color: #333333;
 }
